Details
-
Bug
-
Resolution: Fixed
-
Major
-
0.4.15-dev-712-g4c7bd34 https://git.reactos.org/?p=reactos.git;a=commit;h=4c7bd34a47e62ec5028e8ea5f6c93347bbec4c25
Description
Steps to reproduce:
- Install ReactOS (or boot Live CD)
- Start RAPPS (in case of Live CD, run rapps.exe)
- Press Ctrl+F hotkey
Expected behavior: Search box is focused and you can type text to search
Observed behavior: Search box is not being focused
Regression is introduced in 0.4.15-dev-712-g4c7bd34 by kernel.bin after merging PR #3008.
Initial work for Ctrl+F hotkey was done in 0.4.10-dev-210-g0ec0881 by learn_more.