[RAPPS] Fix Ctrl+F hotkey not working regression

Addendum to 4c7bd34a. CORE-17881